src/objects/EducationAssm__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerID</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>Education_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Best_time_to_reach_parents_at_home__c</fullName>
        <label>Best time to reach parents at home</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_School_Enrollment__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Current School Enrollment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_pass_any_Regent_s_exams_in_HS__c</fullName>
        <label>Did you pass any Regent’s exams in HS?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diploma_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diploma_Status_at_Intake__c</fullName>
        <label>Diploma Status at Intake</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diploma_Type__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Section_1__c</fullName>
        <label>Education Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Section_2__c</fullName>
        <label>Education Section 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Section_1__c</fullName>
        <label>Employment Section 1</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Peers_Section_1__c</fullName>
        <label>Family &amp; Peers Section 1</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_many_credits_have_you_earned__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>How many credits have you earned?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Special_Education__c</fullName>
        <label>In Special Education?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional/Behavioral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning and Emotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning and Speech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech and Emotional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_School_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last School Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>aEducation</relationshipLabel>
        <relationshipName>aEducation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_schools_attended_in_the_last_5_yrs__c</fullName>
        <label>No. schools attended in the last 5 yrs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSIS_No__c</fullName>
        <label>OSIS No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Documents_Collected__c</fullName>
        <label>Optional Documents Collected</label>
        <picklist>
            <picklistValues>
                <fullName>Driver’s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Stub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Letter from last school or GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Transcripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Record Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/ Guardian Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: SA/ MH Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRT/Osborne Release Form</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Optional_Documents_Needed__c</fullName>
        <label>Optional Documents Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Driver’s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Stub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Letter from last school or GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Transcripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Record Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/ Guardian Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: SA/ MH Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRT/Osborne Release Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Present_past_school_suspension__c</fullName>
        <label>Present/past school suspension?</label>
        <picklist>
            <picklistValues>
                <fullName>Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the Past</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_School__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Reason for Leaving School</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_a_Superintendent_s_suspension__c</fullName>
        <label>Received a Superintendent&apos;s suspension?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relation_To_Client__c</fullName>
        <label>Relation To Client</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt/Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girl/Boy Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Documents__c</fullName>
        <label>Required Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Social Security Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent form for Photographs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_End_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_GED_Enrollment_at_Intake__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School/HSE Enrollment at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Attended in Past Two Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled but Not Attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Institution_Hours_from_and_to__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School/Institution Hours (from and to)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Start_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Section_1__c</fullName>
        <label>Substance Abuse Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_Current_Grade__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Current Grade</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Diploma_Status_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Diploma Status at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEP Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No High School/HSE Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSE Diploma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Last_Grade_Completed__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Last Grade Completed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_No_of_High_School_Credits__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update No. of High School Credits</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Optional_Documents_Collected__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Optional Documents Collected</label>
        <picklist>
            <picklistValues>
                <fullName>Driver’s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Stub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Letter from last school or GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Transcripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Record Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/ Guardian Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: SA/ MH Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRT/Osborne Release Form</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Update_Optional_Documents_Needed__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Optional Documents Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Driver’s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Stub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Letter from last school or GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Transcripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Record Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/ Guardian Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: SA/ MH Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Release: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRT/Osborne Release Form</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Update_Required_Documents__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Required Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Social Security Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant Consent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent form for Photographs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules of Conduct and Complaint Procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Justice Consent to Release Info</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Update_School_GED_Enrollment_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update School/HSE Enrollment at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Attended in past two months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled but not attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_grade_are_you_currently_in__c</fullName>
        <description>Copied to Contact when assessment completed</description>
        <label>What grade are you currently in?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_the_last_grade_you_completed__c</fullName>
        <description>Copied to Contact when assessment completed</description>
        <label>What is the last grade you completed?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_is_the_guidance_counselor__c</fullName>
        <label>Who is the guidance counselor?</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>aEducation</label>
    <nameField>
        <displayFormat>EDU-{0000}</displayFormat>
        <label>Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aEducation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>